# rsic

./: ArithmeticDecoder.cpp  ArithmeticDecoder.hpp  ArithmeticEncoder.cpp  ArithmeticEncoder.hpp  ArithmeticEncoder_tests.cpp  CMakeLists.txt  CombinedEncodingDistribution.cpp  CombinedEncodingDistribution.hpp  DecodingDistribution.hpp  Distribution.hpp  EncodingDistribution.cpp  EncodingDistribution.hpp  Image.cpp  Image.hpp  ImageCompressor.cpp  ImageCompressor.hpp  ImageCompressor.kdev4  ImageLayerCompressor.cpp  ImageLayerCompressor.hpp  ImageSegmentCompressor.cpp  ImageSegmentCompressor.hpp  LaplaceEncodingDistribution.cpp  LaplaceEncodingDistribution.hpp  MultiVarEncodingDistribution.cpp  MultiVarEncodingDistribution.hpp  NormalDecodingDistribution.hpp  NormalEncodingDistribution.cpp  NormalEncodingDistribution.hpp  README.md  RgbColour.cpp  RgbColour.hpp  UniformDecodingDistribution.hpp  UniformDistribution.hpp  UniformEncodingDistribution.hpp  VarDistribution.cpp  VarDistribution.hpp  VarEncodingDistribution.cpp  VarEncodingDistribution.hpp  compress_main.cpp  decompress_main.cpp  (+2 more)
